syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Persistence";
option java_multiple_files = true;

package JobConfirmationService;

service JobConfirmationService {
    rpc CreateJobConfirmation (CreateJobConfirmationRequest) returns (CreateJobConfirmationResponse);
    rpc AnswerJobConfirmation (JobConfirmationAnswerRequest) returns (JobConfirmationAnswerResponse);
  
}

message CreateJobConfirmationRequest{
  int32 chat_id = 1;
  int32 substitute_id = 2;
  int32 employer_id = 3;
}

message CreateJobConfirmationResponse{
  JobConfirmationObject job_confirmation = 1;
}


message JobConfirmationAnswerRequest{
  int32 id = 1;
  int32 chat_id = 2;
  JobConfirmationStatus is_accepted = 3;
}

message JobConfirmationAnswerResponse{
  JobConfirmationObject job_confirmation = 1;
}

enum JobConfirmationStatus {
  UNANSWERED = 0;
  ACCEPTED = 1;
  DECLINED = 2;
}

message JobConfirmationObject{
  int32 id = 1;
  int32 chat_id = 2;
  int32 substitute_id = 3;
  int32 employer_id = 4;
  JobConfirmationStatus is_accepted = 5;
  google.protobuf.Timestamp created_at = 6;
}