syntax = "proto3";

option csharp_namespace = "Persistence";
option java_multiple_files = true;

package MatchingProto;

//PROTO OBJECTS

message GigToBeMatched {
  int32 id = 1;
}

message SubstituteToBeMatched {
  int32 id = 1;
}


//------------------------------


//GET SUBSTITUTES
message SubstituteSearchParametersRequest {
  int32 currentUserId = 1;
}
message SubstitutesForMatchingResponse {
  repeated SubstituteToBeMatched substitutes = 1;
}

//GET GIGS
message GigSearchParametersRequest {
  int32 currentUserId = 1;
}

message GigsForMatchingResponse {
  repeated GigToBeMatched gigs = 1;
}

//MATCHING
message MatchRequest {
  int32 currentUser = 1;
  int32 toBeMatchedId =2 ;
  bool wantToMatch = 3;
}

message MatchValidationResponse {
  bool isMatched = 1;
  int32 employerId = 2;
  int32 substituteId = 3;
  int32 gigId = 4;
}

service MatchingService {
  rpc GetSubstitutes(SubstituteSearchParametersRequest) returns (SubstitutesForMatchingResponse);
  rpc GetGigs(GigSearchParametersRequest) returns (GigsForMatchingResponse);

  rpc SendMatchFromSubstitute(MatchRequest) returns (MatchValidationResponse);
  rpc SendMatchFromEmployer(MatchRequest) returns (MatchValidationResponse);
}



